@@ -1,3 +1,7 @@
+2008-02-11  Vincent Untz  <vuntz@gnome.org>
+
+	* Makefile.am: tweak for distcheck...
+
 2009-02-09  Matthias Clasen  <mclasen@redhat.com>
 	
 	* pixmaps/clock-map.png: png version of the world map that is
